Backend/DevopsTools/Dev/k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: learn-dot-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: envoyproxy/envoy:tools-dev
          imagePullPolicy: IfNotPresent
          command: ["envoy", "-c", "/etc/envoy/envoy.yaml"]
          ports:
            - name: https
              containerPort: 443
            - name: admin
              containerPort: 9901
          volumeMounts:
            - name: api-gateway-config
              mountPath: /etc/envoy/envoy.yaml
              subPath: envoy.yaml
              readOnly: true
            - name: api-gateway-certs
              mountPath: /etc/envoy/certificates
              readOnly: true
      volumes:
        - name: api-gateway-config
          configMap:
            name: api-gateway-config
            items:
              - key: envoy.yaml
                path: envoy.yaml
        - name: api-gateway-certs
          secret:
            secretName: api-gateway-certs
