Backend/DevopsTools/Dev/k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: learn-dot-net
spec:
  selector:
    app: api-gateway
  ports:
    - name: https
      port: 60000
      targetPort: https
    - name: admin
      port: 9901
      targetPort: admin
