Backend/DevopsTools/Dev/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: learn-dotnet

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: leduynhan1201/learn-dot-net/backend:1.0.0
          imagePullPolicy: Never

          ports:
            - containerPort: 60001

          env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
