Backend/DevopsTools/Dev/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: learn-dot-net
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 60001
      targetPort: http
